--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=tripSuggesterJr
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/tripjr_db
+spring.datasource.username=postgres
+spring.datasource.password=Trip1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
