--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
